<resources>
    <string name="app_name">Mommy Health App</string>
    <string name="welcome">Welcome !</string>
    <string name="MommyHealthApp">Mommy Health App</string>
    <string name="UserName">User IC</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgetpassword">Forget Your Password?</string>
    <string name="mommycare">In Mommy We Care</string>
    <string name="title_activity_nurse_home">NurseHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Translate EN/BM</string>
    <string name="menu_home">Home</string>
    <string name="menu_create">Add Mother</string>
    <string name="menu_search">Search</string>
    <string name="createMother">Create Mother</string>
    <string name="searchMother">Search Mother</string>
    <string name="logout">Log Out</string>
    <string name="nurse_profile">Medical Personnel Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="ic">IC</string>
    <string name="age">Age</string>
    <string name="husbandIC">Husband IC or Marriage Certificate (Single Mother not required)</string>
    <string name="Referrals">Referrals</string>
    <string name="next_step">Next Step</string>
    <string name="nav_createMotherDetail">Mother Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="family_disease">Family Disease (optional):</string>
    <string name="yes_disease">Yes</string>
    <string name="no_disease">No</string>
    <string name="state_disease">State the disease</string>
    <string name="estimate_due_date">Estimate Due Date (EDD)</string>
    <string name="urine_test">Urine Test :</string>
    <string name="glucose_level">Glucose Level</string>
    <string name="protein_level">Protein Level</string>
    <string name="save_mother">Save</string>
    <string name="nurse_id">Medical Personnel ID :</string>
    <string name="value">value</string>
    <string name="nurse_name">Medical Personnel Name :</string>
    <string name="nurse_ic">Medical Personnel IC :</string>
    <string name="nurse_age">Medical Personnel Age :</string>
    <string name="nurse_email">Medical Personnel Email :</string>
    <string name="nurse_address">Medical Personnel Address :</string>
    <string name="nurse_account">Account Info</string>
    <string name="mummy_race">Race :</string>
    <string name="mommy_race">Race</string>
    <string name="mommy_nationality">Nationality</string>
    <string name="mummy_address">Address</string>
    <string name="mummy_phone">Phone No.</string>
    <string name="mummy_email">Email</string>
    <string name="mummy_ocupation">Occupation</string>
    <string name="mummy_education">Education</string>
    <string name="mummy_lnmp">THA (LNMP)</string>
    <string name="mummy_tal">TAL (EDP)</string>
    <string name="mummy_marriage">Marriage Status :</string>
    <string name="mummy_single">Single</string>
    <string name="mummy_married">Married</string>
    <string name="mummy_husband">Husband Name</string>
    <string name="mummy_husband_ic">Husband IC</string>
    <string name="mummy_husband_work">Husband Occupation</string>
    <string name="mummy_husband_workplace">Husband Work Place</string>
    <string name="mummy_husband_phone">Husband Phone No.</string>
    <string name="mummy_name">Mother Name</string>
    <string name="mummy_id">Mother ID</string>
    <string name="early_test">Early Test</string>
    <string name="maternal_medical_examination">Baby Kicks Record</string>
    <string name="sectionN">Health Tutorial</string>
    <string name="mgtt">MGTT Examination</string>
    <string name="pregnancy_examination">Pregnancy Examination</string>
    <string name="summary">Graph Report</string>
    <string name="mummy_info">Mother Information</string>
    <string name="mummy_detail_info">Mother Detail Information</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="bahagian_A">Pregnancy Experience</string>
    <string name="bahagian_B">Screening Test</string>
    <string name="bahagian_C">Health History</string>
    <string name="bahagian_D">Current Health Status</string>
    <string name="mommy_status">Mother Status</string>
    <string name="status">Status :</string>
    <string name="bloodtest_result">Blood Test :</string>
    <string name="blood_group">Blood Group :</string>
    <string name="blood_type_a">A</string>
    <string name="blood_type_B">B</string>
    <string name="blood_type_ab">AB</string>
    <string name="blood_type_O">O</string>
    <string name="rhd">Rh (D) :</string>
    <string name="rhd_type_positive">Positive</string>
    <string name="rhd_type_negative">Negative</string>
    <string name="rpr">RPR (syphilis) :</string>
    <string name="rpr_type_nonreactive">NON-REACTIVE</string>
    <string name="rpr_type_reactive">REACTIVE</string>
    <string name="norecordfound">No Record Found</string>
    <string name="year">2019</string>
    <string name="month">06</string>
    <string name="section_A_year">Year</string>
    <string name="secA_contentResult">Pregnancy Result</string>
    <string name="secA_birthType">Birth Type</string>
    <string name="secA_placeDiscoverBirth">Place Give Birth</string>
    <string name="secA_gender">Gender :</string>
    <string name="secA_Male">Male</string>
    <string name="secA_Female">Female</string>
    <string name="secA_birthWeight">Birth Weight (kg)</string>
    <string name="secA_complication">Complication :</string>
    <string name="secA_Mother">Mother</string>
    <string name="secA_Children">Children</string>
    <string name="secA_breastfeedingperiod">Breast Feeding Period</string>
    <string name="secA_ChildSituation">Child Situation</string>
    <string name="save">Save</string>
    <string name="secB_rhesusBloodGroup">Rhesus Blood Group</string>
    <string name="secB_vdrl">VDRL+/-TPHA</string>
    <string name="secB_hivRepidTest">HIV/Rapid Test</string>
    <string name="secB_HepatitisB">Hepatitis B</string>
    <string name="secB_Thalassaemia">Thalassaemia</string>
    <string name="secB_thalassaemia_guide">(For the mother have not perform Thalassaemia test before)</string>
    <string name="secB_BFMP">BFMP</string>
    <string name="secC_menstruation">Menstruation :</string>
    <string name="secC_dayNumber">Number of Days</string>
    <string name="secC_round">Rounds</string>
    <string name="secC_familyPlanningPractice">Birth Control Practice :</string>
    <string name="secC_method">Method</string>
    <string name="secC_Period">Period (months or year)</string>
    <string name="secC_smoking">Smoke (Mother) :</string>
    <string name="secC_smokehusband">Smoke (Husband) :</string>
    <string name="secC_motherdiseasestatus">Mother Disease Status :</string>
    <string name="secC_diabetes">Diabetes</string>
    <string name="secC_asthma">Asthma</string>
    <string name="secC_anemia">Anemia</string>
    <string name="secC_highBloodPressure">High Blood Pressure</string>
    <string name="secC_heartDisease">Heart Disease</string>
    <string name="secC_Thalassemia">Thalassemia</string>
    <string name="secC_allergy">Allergy</string>
    <string name="secC_tuberculosis">Tuberculosis</string>
    <string name="secC_other">Others</string>
    <string name="secC_stateit">State It</string>
    <string name="secC_familyDiseaseStatus">Family Disease Status :</string>
    <string name="secC_motherImmue">Mother\'s Immunization Status :</string>
    <string name="secC_tetanus_toxiod">Tetanus/Toxiod :</string>
    <string name="secC_dos1">Dos 1 (Date)</string>
    <string name="secC_dos2">Dos 2 (Date)</string>
    <string name="secC_dosAddOn">Dos Add On (Date)</string>
    <string name="secD_Height">Height (cm)</string>
    <string name="secD_bmi">BMI (kg/m^2)</string>
    <string name="secD_thyroid">Thyroid</string>
    <string name="secD_jaundice">Jaundice</string>
    <string name="secD_pallor">Pallor</string>
    <string name="secD_breast_left">Breast (Left Side)</string>
    <string name="secD_breast_right">Breast (Right Side)</string>
    <string name="secD_varicoseVein_left">Varicose Vein (Left Side)</string>
    <string name="secD_varicoseVein_right">Varicose Vein (Right Side)</string>
    <string name="secD_abdomen">Abdomen</string>
    <string name="secD_other">Others</string>
    <string name="appointmentDate">Appointment Date</string>
    <string name="appointmentTime">Appointment Time</string>
    <string name="race_malay">Malay</string>
    <string name="race_chinese">Chinese</string>
    <string name="race_indian">Indian</string>
    <string name="race_other">Other</string>
    <string name="race_otherRaces">Other Races</string>
    <string name="booking_weight">Booking Weight (kg)</string>
    <string name="booking_BMI">Booking BMI (kg/m2)</string>
    <string name="booking_BP">Booking BP (mmHg)</string>
    <string name="lk_kr">LK/KR</string>
    <string name="lab_test">Lab Test :</string>
    <string name="urine_alb">Urine Alb</string>
    <string name="urine_sugar">Urine Sugar</string>
    <string name="lab_test_HB">Hb</string>
    <string name="examination">Examination :</string>
    <string name="body_weight">Body Weight (kg)</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="pulse">Pulse</string>
    <string name="edema">Edema</string>
    <string name="womb">Womb :</string>
    <string name="pregnancy_period">Pregnancy Period (week)</string>
    <string name="uterine_height">Uterine Height (sm)</string>
    <string name="fetus">Fetus :</string>
    <string name="present_position">Present Position</string>
    <string name="heart">Heart</string>
    <string name="motion">Motion</string>
    <string name="problem">Problem</string>
    <string name="treatment">Treatment</string>
    <string name="due_date">Next Appointment Date</string>
    <string name="mgtt_Age">1. Age above 35 year</string>
    <string name="mgtt_BMI">2. <![CDATA[BMI > 27kg/m^2]]></string>
    <string name="mgtt_obstetric">3. Past Obstetric History</string>
    <string name="mgtt_gestational">Gestational Diabetes Mellitus</string>
    <string name="mgtt_intrauterine">Unexplained Instrauterine Death</string>
    <string name="mgtt_stillbirth">Unexplained Stillbirth</string>
    <string name="mgtt_neotanal">Unexplained Neotanal Death</string>
    <string name="mgtt_recurrent">Recurrent miscarriages</string>
    <string name="mgtt_congenital">Congenital Abnormality(Previous child)</string>
    <string name="mgtt_mascrosomic"><![CDATA[Previous mascrosomic baby 4kg & above]]></string>
    <string name="mgtt_diabetes">4. First degree relatives with Diabetes</string>
    <string name="title_activity_mommy_home">MotherHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="self_check">Dashboard</string>
    <string name="pregnancy_record">Record Book</string>
    <string name="mother_profile">Mother Profile</string>
    <string name="mgtt_current_obstetric">5. Current Obstetric Problems</string>
    <string name="mgtt_Glycosuria">Glycosuria in 1st trimester/2x glycosuria in 2nd or 3rd trimester</string>
    <string name="mgtt_essential_hypertension">Essential Hypertension</string>
    <string name="problem_edit">Edit</string>
</resources>