<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mommyhealthapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_create"
            app:destination="@id/nav_create" />
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_nav_home_to_nurseProfileFragment"
            app:destination="@id/nav_nurseprofile" />
    </fragment>

    <fragment
        android:id="@+id/nav_create"
        android:name="com.example.mommyhealthapp.ui.CreateMother.CreateMotherFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create_mummy" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.mommyhealthapp.ui.SearchMother.SearchMotherFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search_mummy" />
    <fragment
        android:id="@+id/nav_nurseprofile"
        android:name="com.example.mommyhealthapp.ui.NurseProfile.NurseProfileFragment"
        android:label="@string/nurse_profile"
        tools:layout="@layout/nurse_profile_fragment" />

</navigation>